--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,27 @@ img {
   max-width: 100%;
   max-height: 100%;
 }
+
+.loading:after {
+  display: inline-block;
+  animation: dotty steps(1, end) 2s infinite;
+  content: "";
+}
+
+@keyframes dotty {
+  0% {
+    content: "";
+  }
+  25% {
+    content: ".";
+  }
+  50% {
+    content: "..";
+  }
+  75% {
+    content: "...";
+  }
+  100% {
+    content: "";
+  }
+}
